--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Q+A Art Foundation">
     <meta property="og:description" content="We Empower Neurodivergent Voices Through Accessibility and Art">
-    <meta property="og:image" content="https://jaredycw.github.io/assets/meta-thumbnail.jpg">
+    <meta property="og:image" content="https://jaredycw.github.io/assets/meta-thumbnail.webp">
     <meta property="og:url" content="http://qplusa.zapto.org/">
     
     <title>Q+A Art Foundation</title>
@@ -107,22 +107,22 @@
         </div>
                 <div class="hero-component">
                     <div class="hero-gallery gallery-1">
-                        <img loading="lazy" src="./images/example01.jpg" alt="Q Plus A Foundation photo - example01">
+                        <img loading="lazy" src="./images/example01.webp" alt="Q Plus A Foundation photo - example01">
                     </div>
                     <div class="hero-gallery gallery-2">
-                        <img loading="lazy" src="./images/example02.jpg" alt="Q Plus A Foundation photo - example02">
+                        <img loading="lazy" src="./images/example02.webp" alt="Q Plus A Foundation photo - example02">
                     </div>
                     <div class="hero-gallery gallery-3">
-                        <img loading="lazy" src="./images/example03.jpg" alt="Q Plus A Foundation photo - example03">
+                        <img loading="lazy" src="./images/example03.webp" alt="Q Plus A Foundation photo - example03">
                     </div>
                     <div class="hero-gallery gallery-4">
-                        <img loading="lazy" src="./images/example04.jpg" alt="Q Plus A Foundation photo - example04">
+                        <img loading="lazy" src="./images/example04.webp" alt="Q Plus A Foundation photo - example04">
                     </div>
                     <div class="hero-gallery gallery-5">
-                        <img loading="lazy" src="./images/example05.jpg" alt="Q Plus A Foundation photo - example05">
+                        <img loading="lazy" src="./images/example05.webp" alt="Q Plus A Foundation photo - example05">
                     </div>
                     <div class="hero-gallery gallery-6">
-                        <img loading="lazy" src="./images/example06.jpg" alt="Q Plus A Foundation photo - example06">
+                        <img loading="lazy" src="./images/example06.webp" alt="Q Plus A Foundation photo - example06">
                     </div>
 
                     
@@ -364,7 +364,7 @@
                                     </div>
 
                                     <div class="contact-col team-image">
-                                        <img loading="lazy" src="./images/team.jpg" title="Team Image" alt="team photo" >
+                                        <img loading="lazy" src="./images/team.webp" title="Team Image" alt="team photo" >
                                     </div>
                                     <div class="contact-col">
                                         <div class="contact-desktop">
