--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="text-center">
                         <a class="logo-link" href="/">
-                            <img loading="lazy" src="./assets/logo.svg" width="320" height="226" alt="Q+A Art Foundation Logo">
+                            <img src="./assets/logo.svg" width="320" height="226" alt="Q+A Art Foundation Logo">
                          </a>
                         <p class="tagline mb-4">Where Accessibility Meets Art, A Pathway To Inclusion</p>
                         <div class="row mb-3">
