--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
         </div>
                 <div class="hero-component">
                     <div class="hero-gallery gallery-1">
-                        <img fetchpriority="low" loading="lazy" src="./images/example01_240.webp" width="240" alt="Q Plus A Foundation photo - example01">
+                        <img fetchpriority="low" loading="lazy" src="./images/example01_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example01">
                     </div>
                     <div class="hero-gallery gallery-2">
-                        <img fetchpriority="low" loading="lazy" src="./images/example02_240.webp" width="240" alt="Q Plus A Foundation photo - example02">
+                        <img fetchpriority="low" loading="lazy" src="./images/example02_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example02">
                     </div>
                     <div class="hero-gallery gallery-3">
-                        <img fetchpriority="low" loading="lazy" src="./images/example03_240.webp" width="240" alt="Q Plus A Foundation photo - example03">
+                        <img fetchpriority="low" loading="lazy" src="./images/example03_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example03">
                     </div>
                     <div class="hero-gallery gallery-4">
-                        <img fetchpriority="low" loading="lazy" src="./images/example04_240.webp" width="240" alt="Q Plus A Foundation photo - example04">
+                        <img fetchpriority="low" loading="lazy" src="./images/example04_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example04">
                     </div>
                     <div class="hero-gallery gallery-5">
-                        <img fetchpriority="low" loading="lazy" src="./images/example05_240.webp" width="240" alt="Q Plus A Foundation photo - example05">
+                        <img fetchpriority="low" loading="lazy" src="./images/example05_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example05">
                     </div>
                     <div class="hero-gallery gallery-6">
-                        <img fetchpriority="low" loading="lazy" src="./images/example06_240.webp" width="240" alt="Q Plus A Foundation photo - example06">
+                        <img fetchpriority="low" loading="lazy" src="./images/example06_240.webp" width="240" height="168" alt="Q Plus A Foundation photo - example06">
                     </div>
 
                     
